@@ -1,0 +1,2 @@
+//---- Use FreeType to build and rasterize the font atlas (instead of stb_truetype which is embedded by default in Dear ImGui)
+#define IMGUI_ENABLE_FREETYPE
